add basic files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,57 @@
+# Node.js
+node_modules/
+dist/
+.build/
+.env
+.env.local
+.env.*.local
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# OS and Editor-specific Files
+.DS_Store  # macOS
+Thumbs.db  # Windows
+.idea/     # JetBrains IDEs (e.g., WebStorm, IntelliJ)
+.vscode/   # Visual Studio Code
+*.swp      # Vim swap files
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Dependency directories
+package-lock.json
+yarn.lock
+.pnpmfile.cjs
+.pnpm-store/
+
+# Build Artifacts
+build/
+coverage/
+tmp/
+out/
+
+# TypeScript
+*.tsbuildinfo
+
+# Webpack/Vite/Cra
+.cache/
+public/
+**/bundle-*.js
+**/chunk-*.js
+**/*.map
+
+# Test Coverage Reports
+coverage/
+.nyc_output/
+
+# Miscellaneous
+*.sublime-workspace
+*.sublime-project
+*.sass-cache/
+*.vscode/
+.vscode/
+*.log
+!.gitkeep
